# python-edasij6udnutele

./: README.md  pyproject.toml
src/quadric_solver_rakipp/: QuadraticEquation.py
